Added heatstroke related resource hub info, external resource, quizzes and translation

--- a/i18n/resources/en/common.json
+++ b/i18n/resources/en/common.json
@@ -71,7 +71,8 @@
         "fire": "Fire Safety",
         "kit": "Emergency Kits",
         "disease": "Disease Outbreak",
-        "earthquake": "Earthquake"
+        "earthquake": "Earthquake",
+        "heatstroke": "HeatStroke"
       }
     },
 
@@ -246,7 +247,8 @@
       "fire": "Fire Safety",
       "kit": "Emergency Kits",
       "disease": "Disease Outbreak",
-      "earthquake": "Earthquake"
+      "earthquake": "Earthquake",
+      "heatstroke": "HeatStroke"
     }
   },
   "games": {
