--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -74,7 +74,8 @@
         "fire": "தீ பாதுகாப்பு",
         "kit": "அவசரக் கருவிகள்",
         "disease": "நோய் பரவல்",
-        "earthquake": "நிலநடுக்கம்"
+        "earthquake": "நிலநடுக்கம்",
+        "heatstroke": "வெப்பத் தாக்கம்"
       }
     },
 
@@ -251,7 +252,8 @@
       "fire": "தீ பாதுகாப்பு",
       "kit": "அவசரக் கிட்கள்",
       "disease": "நோய் பரவல்",
-      "earthquake": "நிலநடுக்கம்"
+      "earthquake": "நிலநடுக்கம்",
+      "heatstroke": "வெப்பத் தாக்கம்"
     }
   },
   "games": {
