--- a/i18n/resources/ta/preparedness.json
+++ b/i18n/resources/ta/preparedness.json
@@ -698,5 +698,72 @@
         "desc": "நீங்கள் பாதுகாப்பான இடத்தில் இருந்தாலும், நிலநடுக்கத்தின் போது எடுக்க வேண்டிய அடிப்படை நடவடிக்கைகள் குறித்து அறிந்து கொள்ளுங்கள்."
       }
     }
+  },
+  "heatstroke": {
+    "title": "வெப்பஅதிர்ச்சி",
+    "description": "நீண்ட நேரம் அதிக வெப்பத்தில் இருப்பது வெப்பம் சார்ந்த நோய்களுக்கு வழிவகுக்கும், இதில் வெப்ப அதிர்ச்சி மிகவும் ஆபத்தானது. அதிக வெப்பநிலை காலங்களில் பாதுகாப்பாக இருக்கவும், உடலைப் பாதுகாக்கவும் கற்றுக்கொள்ளுங்கள்.",
+    "reasons": {
+      "heat1": {
+        "label": "உயர் சூழல் வெப்பநிலை",
+        "text": "அதிகப்படியான சூழல் வெப்பம் உடலின் வெப்பநிலையை பாதுகாப்பான மட்டத்திற்கு மேல் உயர்த்துகிறது."
+      },
+      "heat2": {
+        "label": "அதிக ஈரப்பதம்",
+        "text": "அதிக ஈரப்பதம் வியர்வை மூலம் உடலை குளிர்விக்கும் திறனை குறைக்கிறது."
+      },
+      "heat3": {
+        "label": "நீண்ட நேர நேரடி வெப்பம்",
+        "text": "நீண்ட நேரம் நேரடி சூரிய வெளிச்சத்தில் இருப்பது வெப்ப சோர்வின் அபாயத்தை அதிகரிக்கிறது."
+      },
+      "heat4": {
+        "label": "உடல் நீரிழப்பு",
+        "text": "போதுமான அளவு தண்ணீர் குடிக்காததால் உடல் குளிர்விக்கும் திறன் குறைகிறது மற்றும் உடல் அதிகமாக சூடாகிறது."
+      },
+      "heat5": {
+        "label": "மோசமான காற்றோட்டம்",
+        "text": "சிறந்த காற்றோட்டமில்லாத சூழல்கள் வெப்பத்தை சிக்கவைத்து உடல் குளிர்வதை சிரமமாக்குகின்றன."
+      }
+    },
+    "sections": {
+      "prepareBefore": {
+        "title": "முன் தயாரிப்பு",
+        "items": {
+          "heat-01": "நாளாந்திர வானிலை முன்னறிவிப்புகள் மற்றும் NEA வெப்ப எச்சரிக்கைகளைச் சரிபார்க்கவும்.",
+          "heat-02": "தாகமாக இல்லாவிட்டாலும் போதுமான தண்ணீர் குடிக்கவும்.",
+          "heat-03": "இலகுவான, வெளிர் நிற மற்றும் தளர்வான உடைகளை அணியவும்.",
+          "heat-04": "காலையிலும் மாலையிலும் வெளியுறா செயல்களைத் திட்டமிடுங்கள்."
+        }
+      },
+      "protectDuring": {
+        "title": "வெப்ப காலத்தில் பாதுகாப்பு",
+        "items": {
+          "heat-05": "சூடான நேரங்களில் குளிர்ந்த அல்லது ஏர்-கண்டிஷன் செய்யப்பட்ட இடங்களில் இருக்கவும்.",
+          "heat-06": "வெளியே செல்லும் போது தொப்பிகள், குடைகள் மற்றும் சூரிய பாதுகாப்பு லோஷன் பயன்படுத்தவும்.",
+          "heat-07": "வெளியில் இருக்கும் போது அடிக்கடி ஓய்வு எடுத்து நிழலில் அமரவும்.",
+          "heat-08": "உச்ச வெப்ப நேரங்களில் கடுமையான உடற்பயிற்சிகளைத் தவிர்க்கவும்."
+        }
+      },
+      "recoverAfter": {
+        "title": "வெப்பத்திற்குப் பின் நடவடிக்கைகள்",
+        "items": {
+          "heat-09": "தலைசுற்றல், இதயத் துடிப்பு வேகம், வாந்தி அல்லது குழப்பம் போன்ற அறிகுறிகளை கவனிக்கவும் — உடனடியாக மருத்துவ உதவியை நாடவும்.",
+          "heat-10": "மருத்துவ உதவி வரும்வரை ஈரமான துணிகள், விசிறிகள் அல்லது பனிப்பொதி மூலம் உடலை குளிர்விக்கவும்."
+        }
+      }
+    },
+    "externalResources": {
+      "wsh": {
+        "title": "வெப்ப அழுத்த மேலாண்மை",
+        "desc": "வெப்ப அதிர்ச்சியின் அபாயத்தை புறக்கணிக்காதீர்கள். உங்களை பாதுகாக்க வேண்டிய நடவடிக்கைகளை எடுங்கள்."
+      },
+      "mom": {
+        "title": "பணியிடத்தில் வெப்ப அதிர்ச்சி தடுப்பு",
+        "desc": "வெப்ப அதிர்ச்சி அறிகுறிகள், முதல் உதவி நடவடிக்கைகள் மற்றும் தடுப்பு முறைகளை அறிந்து பாதுகாப்பாக இருங்கள்."
+      },
+      "health": {
+        "title": "வகைகள் & அறிகுறிகள்",
+        "desc": "வெப்பநிலை அதிகரித்து வருவதால், மேலும் பலர் மருத்துவ உதவியை நாடுகின்றனர் — விளையாட்டு வீரர்களும் வெளிப்புறப் பணியாளர்களும் மட்டுமல்ல, அனைவரும் எச்சரிக்கையாக இருக்க வேண்டும்."
+      }
+    }
   }
 }
