--- a/i18n/resources/ta/quiz.json
+++ b/i18n/resources/ta/quiz.json
@@ -2099,6 +2099,216 @@
           ]
         }
       ]
+    },
+    {
+      "id": "heatstroke",
+      "title": "வெப்பஅதிர்ச்சி",
+      "sets": [
+        {
+          "id": "heat-prevent",
+          "title": "வெப்பஅதிர்ச்சியைத் தடுப்பது",
+          "description": "வெப்பம் சார்ந்த நோய்களைத் தடுக்க கற்றுக்கொள்ளுங்கள்.",
+          "image": "",
+          "questions": [
+            {
+              "id": "heat-p-1",
+              "prompt": "சூடான காலநிலையில் வெப்பஅதிர்ச்சியைத் தடுப்பதற்கான சிறந்த வழி எது?",
+              "options": [
+                "மிகவும் தண்ணீர் குடித்து உடலை ஈரப்பதமாக வைத்திருத்தல்",
+                "கருப்பு, இறுக்கமான உடைகள் அணிதல்",
+                "உணவைத் தவிர்த்து குளிர்ச்சியாக இருத்தல்",
+                "அடிக்கடி சூடான குளியல் எடுப்பது"
+              ],
+              "correctIndex": 0,
+              "hint": "ஈரப்பதம் முக்கியம் — தாகம் இல்லாவிட்டாலும் தண்ணீர் குடியுங்கள்."
+            },
+            {
+              "id": "heat-p-2",
+              "prompt": "வெப்ப அழுத்தத்தை குறைக்க எந்த வகை ஆடைகள் பரிந்துரைக்கப்படுகின்றன?",
+              "options": [
+                "இறுக்கமான கருப்பு உடைகள்",
+                "இலகுவான, வெளிர் நிறம் மற்றும் தளர்வான உடைகள்",
+                "வெப்பத்தை தடுக்க கனமான ஜாக்கெட்",
+                "பிளாஸ்டிக் மழைக்கோட்"
+              ],
+              "correctIndex": 1,
+              "hint": "இலகுவான, காற்றோட்டமான உடைகள் உடல் வெப்பத்தை கட்டுப்படுத்த உதவுகின்றன."
+            },
+            {
+              "id": "heat-p-3",
+              "prompt": "சூடான நாட்களில் வெளிப்புற செயல்பாடுகளுக்கான சிறந்த நேரம் எது?",
+              "options": [
+                "மதியம் 12 மணி முதல் 3 மணி வரை",
+                "அதிகாலை அல்லது மாலை",
+                "ஈரப்பதம் இருக்கும் எந்த நேரத்திலும்",
+                "நேரக் கட்டுப்பாடுகள் இல்லாமல் எப்போதும்"
+              ],
+              "correctIndex": 1,
+              "hint": "அதிக வெப்ப நேரத்தை தவிர்த்து அதிகாலை அல்லது மாலை தேர்வு செய்யுங்கள்."
+            },
+            {
+              "id": "heat-p-4",
+              "prompt": "சூடான காலநிலையில் தவிர்க்க வேண்டிய பானங்கள் எவை?",
+              "options": [
+                "மதுபானம் மற்றும் அதிக சர்க்கரை உள்ள பானங்கள்",
+                "தண்ணீர் மற்றும் எலக்ட்ரோலைட் பானங்கள்",
+                "புதிய பழச்சாறு",
+                "மூலிகை தேநீர்"
+              ],
+              "correctIndex": 0,
+              "hint": "மதுபானம் மற்றும் அதிக சர்க்கரை உடலை விரைவாக நீரிழிவு செய்யும்."
+            },
+            {
+              "id": "heat-p-5",
+              "prompt": "வெப்ப சோர்வு ஏற்படுவதற்கான ஆரம்ப அறிகுறி எது?",
+              "options": [
+                "தணிந்த மற்றும் ஈரமான தோல்",
+                "குளிர்ந்த அறையில் திடீர் நடுக்கம்",
+                "தொடர்ச்சியான தும்மல்",
+                "இரவில் மட்டுமே சுவாசக் குறைபாடு"
+              ],
+              "correctIndex": 0,
+              "hint": "ஈரமான தோல், தலைசுற்றல், மற்றும் சோர்வு ஆரம்ப வெப்பஅதிர்ச்சி அறிகுறிகள்."
+            }
+          ]
+        },
+        {
+          "id": "heat-during",
+          "title": "அதிக வெப்பநிலையில் பாதுகாப்பு",
+          "description": "சூடான காலங்களில் பாதுகாப்பாக இருப்பது எப்படி என்பதை கற்றுக்கொள்ளுங்கள்.",
+          "image": "",
+          "questions": [
+            {
+              "id": "heat-d-1",
+              "prompt": "அதிக வெப்பத்தில் வெளியே இருக்கும்போது தலைசுற்றல் அல்லது பலவீனம் ஏற்பட்டால், நீங்கள் என்ன செய்ய வேண்டும்?",
+              "options": [
+                "சாலையின் நடுவில் படுத்துக்கொள்ளுங்கள்",
+                "நிழலான இடத்திற்கு அல்லது குளிர்ந்த அறைக்கு சென்று ஓய்வெடுங்கள்",
+                "குளிர்ச்சி பெற மது அருந்துங்கள்",
+                "அறிகுறிகளை புறக்கணித்து தொடருங்கள்"
+              ],
+              "correctIndex": 1,
+              "hint": "உடலை குளிர்ச்சியாக்க நிழலான அல்லது ஏர்-கண்டிஷன் இடத்திற்கு நகருங்கள்."
+            },
+            {
+              "id": "heat-d-2",
+              "prompt": "அதிக வெப்பத்தில் பாதுகாப்பான இடம் எது?",
+              "options": [
+                "ஏர்-கண்டிஷன் செய்யப்பட்ட அறை",
+                "நேரடி சூரிய வெளிச்சம்",
+                "மூடிய ஜன்னல்களுடன் நிறுத்தப்பட்ட கார்",
+                "வீட்டின் கூரை மீது"
+              ],
+              "correctIndex": 0,
+              "hint": "ஏர்-கண்டிஷன் அல்லது நிழலான இடங்கள் உடல் வெப்பத்தைக் கட்டுப்படுத்த உதவுகின்றன."
+            },
+            {
+              "id": "heat-d-3",
+              "prompt": "யாராவது வெப்பத்தில் மயக்கமடைந்தால், நீங்கள் என்ன செய்ய வேண்டும்?",
+              "options": [
+                "அவசர சேவையை அழைத்து அவரை குளிர்ந்த இடத்துக்கு மாற்றுங்கள்",
+                "அவர்களுக்கு சூடான தண்ணீர் தெளிக்கவும்",
+                "அவர்களை கட்டாயமாக நடக்கச் செய்யுங்கள்",
+                "பனிக்குடும்பத்தில் அவர்களை போர்த்துங்கள்"
+              ],
+              "correctIndex": 0,
+              "hint": "உடனடியாக உதவியை அழைத்து குளிர்ந்த இடத்துக்கு மாற்றுங்கள்."
+            },
+            {
+              "id": "heat-d-4",
+              "prompt": "குழந்தைகளும் முதியவர்களும் ஏன் வெப்பஅதிர்ச்சிக்கு அதிக ஆபத்தானவர்கள்?",
+              "options": [
+                "அவர்களின் உடல் வெப்பநிலையை கட்டுப்படுத்தும் திறன் குறைவாக இருப்பதால்",
+                "அவர்கள் தண்ணீர் குடிக்க விரும்பவில்லை",
+                "அவர்கள் எப்போதும் தடித்த ஆடைகளை விரும்புகின்றனர்",
+                "அவர்கள் நீரிழப்பு பிரச்சினைக்கு எதிர்ப்பு சக்தி கொண்டவர்கள்"
+              ],
+              "correctIndex": 0,
+              "hint": "குழந்தைகளும் முதியவர்களும் அதிக வெப்பத்தில் அதிக பாசாங்கானவர்கள்."
+            },
+            {
+              "id": "heat-d-5",
+              "prompt": "வெப்ப அலைக்காலத்தில் காரில் உட்கார்வது ஆபத்தானது ஏன்?",
+              "options": [
+                "காற்று இல்லாமல் வெப்பம் அதிகரித்து சுவாசம் கடினமாகும்",
+                "Wi-Fi சிக்னல் இழக்கலாம்",
+                "காற்றில் தூசி அதிகமாகும்",
+                "முதுகு வலி ஏற்படும்"
+              ],
+              "correctIndex": 0,
+              "hint": "காருக்குள் வெப்பம் விரைவாக உயர்ந்து உயிருக்கு ஆபத்தான நிலையை ஏற்படுத்தும்."
+            }
+          ]
+        },
+        {
+          "id": "heat-after",
+          "title": "வெப்பஅதிர்ச்சிக்கு பின் மீட்பு",
+          "description": "வெப்பஅதிர்ச்சிக்கு பின் முதலுதவி, சிகிச்சை மற்றும் மீட்பு படிகளை கற்றுக்கொள்ளுங்கள்.",
+          "image": "",
+          "questions": [
+            {
+              "id": "heat-a-1",
+              "prompt": "வெப்பஅதிர்ச்சியை அனுபவித்த பிறகு, நீங்கள் என்ன செய்ய வேண்டும்?",
+              "options": [
+                "நலமாக இருந்தால் புறக்கணியுங்கள்",
+                "அறிகுறிகள் மறைந்தாலும் உடனடியாக மருத்துவரை அணுகுங்கள்",
+                "உடனே கடுமையான உடற்பயிற்சியைத் தொடங்குங்கள்",
+                "மீட்பு வேகமாக நடக்க மதுபானம் அருந்துங்கள்"
+              ],
+              "correctIndex": 1,
+              "hint": "மருத்துவ பரிசோதனை முக்கியம்; சிக்கல்கள் பிறகு ஏற்படலாம்."
+            },
+            {
+              "id": "heat-a-2",
+              "prompt": "பின்வரும் குளிர்விக்கும் முறைகளில் எது பரிந்துரைக்கப்படவில்லை?",
+              "options": [
+                "ஈரமான துணியை கழுத்திலும் கைகுழியிலும் வைக்கவும்",
+                "பனிப்பொட்டிகளை தலையிலும் இடுப்பிலும் வைக்கவும்",
+                "உடனடியாக பனியுடன் கூடிய நீரில் மூழ்கடிக்கவும்",
+                "விசிறியை பயன்படுத்தி காற்றோட்டத்தை அதிகரிக்கவும்"
+              ],
+              "correctIndex": 2,
+              "hint": "பனியுடன் கூடிய திடீர் குளியல் ஷாக்கை ஏற்படுத்தலாம்."
+            },
+            {
+              "id": "heat-a-3",
+              "prompt": "வெப்பஅதிர்ச்சியிலிருந்து மீண்ட பின் எதிர்காலத்தில் தவிர்க்க சிறந்த வழி எது?",
+              "options": [
+                "தண்ணீர் குடிக்கவும், இடைவேளை எடுத்து ஓய்வெடுக்கவும், வானிலை எச்சரிக்கைகளை பின்பற்றவும்",
+                "தண்ணீர் குடிப்பதை முழுமையாக தவிர்க்கவும்",
+                "வெயிலில் தடித்த ஆடைகள் அணியவும்",
+                "மதிய நேரத்தில் மட்டுமே உடற்பயிற்சி செய்யவும்"
+              ],
+              "correctIndex": 0,
+              "hint": "ஈரப்பதம் மற்றும் முன்கூட்டியே திட்டமிடுதல் சிறந்த தடுப்பு முறைகள்."
+            },
+            {
+              "id": "heat-a-4",
+              "prompt": "பெரும் வெப்பஅதிர்ச்சியின் ஒரு முக்கிய அறிகுறி எது?",
+              "options": [
+                "குழப்பம் மற்றும் மயக்கம்",
+                "சிறிய நடுக்கம்",
+                "கண்கள் அரிப்பு",
+                "வயிற்றில் சத்தம்"
+              ],
+              "correctIndex": 0,
+              "hint": "குழப்பம் அல்லது மயக்கம் ஏற்பட்டால் உடனடி மருத்துவ உதவி தேவை."
+            },
+            {
+              "id": "heat-a-5",
+              "prompt": "வெப்பஅதிர்ச்சிக்கு பின் யாரை நெருங்கிப் பார்வையிட வேண்டும்?",
+              "options": [
+                "குழந்தைகள் மற்றும் முதியவர்கள்",
+                "தொழில்முறை விளையாட்டு வீரர்கள் மட்டுமே",
+                "விலங்குகள் மட்டும்",
+                "கடற்கரையில் வசிப்பவர்கள்"
+              ],
+              "correctIndex": 0,
+              "hint": "குழந்தைகள் மற்றும் முதியவர்கள் அதிக ஆபத்தில் உள்ளதால் கூடுதல் கவனம் தேவை."
+            }
+          ]
+        }
+      ]
     }
   ]
 }
