--- a/i18n/resources/zh/quiz.json
+++ b/i18n/resources/zh/quiz.json
@@ -2029,6 +2029,216 @@
           ]
         }
       ]
+    },
+    {
+      "id": "heatstroke",
+      "title": "中暑",
+      "sets": [
+        {
+          "id": "heat-prevent",
+          "title": "预防中暑",
+          "description": "了解如何在中暑发生前预防与高温相关的疾病。",
+          "image": "",
+          "questions": [
+            {
+              "id": "heat-p-1",
+              "prompt": "在炎热天气中，预防中暑的最佳方法是：",
+              "options": [
+                "多喝水并保持身体水分",
+                "穿深色、紧身的衣服",
+                "不吃饭以保持凉爽",
+                "经常洗热水澡"
+              ],
+              "correctIndex": 0,
+              "hint": "保持水分充足是关键，即使不觉得渴也要适量饮水。"
+            },
+            {
+              "id": "heat-p-2",
+              "prompt": "以下哪种衣物最适合降低热压力？",
+              "options": [
+                "紧身的黑色衣服",
+                "轻薄、浅色、宽松的衣服",
+                "厚重外套以阻挡热量",
+                "塑料雨衣"
+              ],
+              "correctIndex": 1,
+              "hint": "轻薄、透气的衣服有助于保持身体温度稳定。"
+            },
+            {
+              "id": "heat-p-3",
+              "prompt": "在炎热天气下，安排户外活动的最佳时间是：",
+              "options": [
+                "中午12点到下午3点之间",
+                "清晨或傍晚",
+                "只要觉得潮湿就可以",
+                "全天任何时间都可以"
+              ],
+              "correctIndex": 1,
+              "hint": "避免高温时段，选择清晨或傍晚更安全。"
+            },
+            {
+              "id": "heat-p-4",
+              "prompt": "在炎热天气下，应避免饮用哪类饮料？",
+              "options": [
+                "酒精饮料和高糖饮料",
+                "水和运动型电解质饮料",
+                "新鲜果汁",
+                "花草茶"
+              ],
+              "correctIndex": 0,
+              "hint": "酒精和高糖饮料会加快身体脱水。"
+            },
+            {
+              "id": "heat-p-5",
+              "prompt": "以下哪一项是中暑前的早期症状？",
+              "options": [
+                "皮肤冰凉且湿黏",
+                "在冷房中突然发冷",
+                "连续打喷嚏",
+                "只在晚上呼吸急促"
+              ],
+              "correctIndex": 0,
+              "hint": "湿冷的皮肤、头晕、疲劳是中暑的早期迹象。"
+            }
+          ]
+        },
+        {
+          "id": "heat-during",
+          "title": "高温期间的防护措施",
+          "description": "学习在高温天气中保护自己的方法。",
+          "image": "",
+          "questions": [
+            {
+              "id": "heat-d-1",
+              "prompt": "在室外高温环境中感到头晕或虚弱时，你应该：",
+              "options": [
+                "躺在人行道上",
+                "立即移到阴凉处或有空调的地方休息",
+                "喝酒降温",
+                "忽视症状继续工作"
+              ],
+              "correctIndex": 1,
+              "hint": "寻找阴凉或凉爽环境休息，避免病情恶化。"
+            },
+            {
+              "id": "heat-d-2",
+              "prompt": "极端高温时最安全的地方是：",
+              "options": [
+                "有空调的室内",
+                "阳光直射的地方",
+                "关窗停放的汽车内",
+                "屋顶上"
+              ],
+              "correctIndex": 0,
+              "hint": "有空调或阴凉的环境最安全，有助于调节体温。"
+            },
+            {
+              "id": "heat-d-3",
+              "prompt": "如果有人因高温晕倒，你应该：",
+              "options": [
+                "拨打急救电话并将他移至凉爽的地方",
+                "泼热水让他清醒",
+                "强迫他走动恢复",
+                "用厚被子包裹身体"
+              ],
+              "correctIndex": 0,
+              "hint": "拨打急救电话并在等待救援时给身体降温。"
+            },
+            {
+              "id": "heat-d-4",
+              "prompt": "为什么儿童和老人更容易中暑？",
+              "options": [
+                "因为他们的体温调节能力较弱",
+                "因为他们不喜欢喝水",
+                "因为他们更喜欢穿厚衣服",
+                "因为他们对脱水免疫"
+              ],
+              "correctIndex": 0,
+              "hint": "老人和儿童对高温更敏感，需要额外保护。"
+            },
+            {
+              "id": "heat-d-5",
+              "prompt": "在热浪期间待在停放的汽车内的主要危险是：",
+              "options": [
+                "缺氧和车内温度迅速升高",
+                "Wi-Fi信号丢失",
+                "空气中灰尘过多",
+                "腰痛"
+              ],
+              "correctIndex": 0,
+              "hint": "停放的汽车会迅速升温，可能致命。"
+            }
+          ]
+        },
+        {
+          "id": "heat-after",
+          "title": "中暑后的恢复与护理",
+          "description": "了解中暑后的急救、护理及恢复步骤。",
+          "image": "",
+          "questions": [
+            {
+              "id": "heat-a-1",
+              "prompt": "在经历中暑后，你应该：",
+              "options": [
+                "如果感觉好转就忽略它",
+                "即使症状消失也要立即就医",
+                "立刻恢复剧烈运动",
+                "喝烈酒加速恢复"
+              ],
+              "correctIndex": 1,
+              "hint": "中暑可能有延迟并发症，必须进行专业检查。"
+            },
+            {
+              "id": "heat-a-2",
+              "prompt": "以下哪种降温方法不推荐使用？",
+              "options": [
+                "用湿毛巾敷在颈部和腋下",
+                "在头部和腹股沟使用冰袋",
+                "立即将患者浸入冰冷的水中",
+                "使用风扇加快散热"
+              ],
+              "correctIndex": 2,
+              "hint": "突然的冰水浸泡可能导致休克，不推荐使用。"
+            },
+            {
+              "id": "heat-a-3",
+              "prompt": "在中暑恢复后，预防未来中暑的关键是：",
+              "options": [
+                "保持水分，安排休息并关注天气预警",
+                "完全不喝水",
+                "在夏天穿厚衣服",
+                "只在中午锻炼"
+              ],
+              "correctIndex": 0,
+              "hint": "补充水分和合理安排活动是最有效的预防措施。"
+            },
+            {
+              "id": "heat-a-4",
+              "prompt": "以下哪项是严重中暑的症状？",
+              "options": [
+                "意识混乱或失去知觉",
+                "轻微发抖",
+                "眼睛发痒",
+                "肚子微微咕噜响"
+              ],
+              "correctIndex": 0,
+              "hint": "意识障碍、昏厥是严重中暑的紧急信号。"
+            },
+            {
+              "id": "heat-a-5",
+              "prompt": "中暑后，哪一类人群需要重点监测？",
+              "options": [
+                "儿童和老人",
+                "只有职业运动员",
+                "只有宠物",
+                "住在海边的人"
+              ],
+              "correctIndex": 0,
+              "hint": "儿童和老人风险更高，需重点观察和护理。"
+            }
+          ]
+        }
+      ]
     }
   ]
 }
