--- a/i18n/resources/en/preparedness.json
+++ b/i18n/resources/en/preparedness.json
@@ -701,5 +701,72 @@
         "desc": "Practice and learn about the basic guide on steps to take if you are caught in one even you are in a “safe” place for now."
       }
     }
+  },
+  "heatstroke": {
+    "title": "Heat Stroke",
+    "description": "Prolonged exposure to high temperatures can lead to heat-related illnesses, including heat stroke, which is a life-threatening condition. Learn how to stay safe and protect yourself during extreme heat events.",
+    "reasons": {
+      "heat1": {
+        "label": "High Ambient Temperature",
+        "text": "Extreme environmental heat increases the body's core temperature beyond safe levels."
+      },
+      "heat2": {
+        "label": "High Humidity",
+        "text": "Excessive humidity reduces the body's ability to cool down through sweating."
+      },
+      "heat3": {
+        "label": "Prolonged Sun Exposure",
+        "text": "Spending extended periods under direct sunlight without shade increases the risk of heat exhaustion."
+      },
+      "heat4": {
+        "label": "Dehydration",
+        "text": "Insufficient fluid intake limits the body's cooling mechanisms and accelerates overheating."
+      },
+      "heat5": {
+        "label": "Poor Ventilation",
+        "text": "Lack of airflow in hot environments traps heat and makes cooling difficult."
+      }
+    },
+    "sections": {
+      "prepareBefore": {
+        "title": "Prepare Before",
+        "items": {
+          "heat-01": "Check daily weather forecasts and heat advisories from NEA.",
+          "heat-02": "Stay hydrated by drinking plenty of water, even if you're not thirsty.",
+          "heat-03": "Wear lightweight, light-colored, and loose-fitting clothing.",
+          "heat-04": "Plan outdoor activities in the early morning or late evening when temperatures are lower."
+        }
+      },
+      "protectDuring": {
+        "title": "Protect Yourself During",
+        "items": {
+          "heat-05": "Stay indoors in cool or air-conditioned environments whenever possible.",
+          "heat-06": "Use hats, umbrellas, and sunscreen when outdoors to reduce heat exposure.",
+          "heat-07": "Take frequent breaks and rest in shaded areas when outdoors.",
+          "heat-08": "Avoid strenuous physical activity during peak heat hours."
+        }
+      },
+      "recoverAfter": {
+        "title": "Recover After",
+        "items": {
+          "heat-09": "Watch for symptoms like dizziness, rapid heartbeat, nausea, or confusion — seek medical help immediately if present.",
+          "heat-10": "Cool the body using wet towels, fans, or ice packs while waiting for medical attention."
+        }
+      }
+    },
+    "externalResources": {
+      "wsh": {
+        "title": "Heat Stress Management",
+        "desc": "Heat stress must not be overlooked, and you should take the necessary measures to protect yourself from heat-related risks."
+      },
+      "mom": {
+        "title": "Heat Stress in the Workplace",
+        "desc": "Learn about heat stroke symptoms, first-aid response, and prevention strategies in workplace."
+      },
+      "health": {
+        "title": "Types and Symptoms",
+        "desc": "The weather’s getting hotter but it’s not marathoners or extreme sports enthusiasts who are catching the attention of doctors."
+      }
+    }
   }
 }
